--- a/hotel-cloud-api/src/main/resources/application-test.yml
+++ b/hotel-cloud-api/src/main/resources/application-test.yml
@@ -3,9 +3,9 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://localhost:3306/hotel_cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+            url: jdbc:mysql://119.3.169.76:3306/hotel_cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
             username: root
-            password: 123qwe
+            password: idsbg123.
             initial-size: 10
             max-active: 100
             min-idle: 10
