--- a/hotel-cloud-api/src/main/resources/application-prod.yml
+++ b/hotel-cloud-api/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://119.3.169.76:3306/hotel_cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+            url: jdbc:mysql://119.3.169.76:3306/hotel_cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
             username: root
             password: idsbg123.
             initial-size: 10
@@ -29,9 +29,6 @@ spring:
                     log-slow-sql: true
                     slow-sql-millis: 1000
                     merge-sql: false
-                wall:
-                    config:
-                        multi-statement-allow: true
 
 
 ##多数据源的配置
