--- a/renren-fast-vue-master/package.json
+++ b/renren-fast-vue-master/package.json
@@ -30,6 +30,7 @@
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
     "vue-cookie": "1.1.4",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
