--- a/renren-fast-vue-master/package.json
+++ b/renren-fast-vue-master/package.json
@@ -24,6 +24,7 @@
     "gulp-replace": "0.6.1",
     "gulp-shell": "0.6.5",
     "lodash": "4.17.5",
+    "mathjs": "^7.6.0",
     "node-sass": "4.9.0",
     "npm": "^6.9.0",
     "sass-loader": "6.0.6",
