--- a/hotel-cloud-api/src/main/resources/application.yml
+++ b/hotel-cloud-api/src/main/resources/application.yml
@@ -44,10 +44,14 @@ spring:
     username: YunZhuUserName_Az1
     password: yun_zhu_password_Az1
     server-uri: tcp://yunzhu.store:1883
-    client-id: hotel-cloud-api
+    client-id: hotel-cloud-api_dev
     publish-topic: /yunzhuA/{0}/down
     time-out: 30
     qos: 1
+    subscribe-topic: /yunzhuA/{0}/up
+
+  sys:
+    temp-dir: /Users/aby/Desktop/test1
 
 
 #mybatis
@@ -69,7 +73,7 @@ mybatis-plus:
     cache-enabled: false
     call-setters-on-nulls: true
     jdbc-type-for-null: 'null'
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
   # APP模块，是通过jwt认证的，如果要使用APP模块，则需要修改【加密秘钥】
   jwt:
