二维码图片下载

--- a/hotel-cloud-api/pom.xml
+++ b/hotel-cloud-api/pom.xml
@@ -254,6 +254,12 @@
 			<artifactId>mqtt-client</artifactId>
 			<version>1.14</version>
 		</dependency>
+		<!--excel操作-->
+		<dependency>
+			<groupId>cn.afterturn</groupId>
+			<artifactId>easypoi-spring-boot-starter</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
