--- a/hotel-cloud-api/src/main/resources/application.yml
+++ b/hotel-cloud-api/src/main/resources/application.yml
@@ -37,7 +37,9 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
-#  resources:
+  main:
+    allow-bean-definition-overriding: true
+  #  resources:
 #    add-mappings: false
 
   mqtt:
